Fix bug improve store client

--- a/src/PlatformExampleAppWeb/apps/playground-text-snippet/src/index.html
+++ b/src/PlatformExampleAppWeb/apps/playground-text-snippet/src/index.html
@@ -13,4 +13,9 @@
     <body class="mat-typography">
         <platform-example-web-root></platform-example-web-root>
     </body>
+    <div style="visibility: hidden; font-family: 'FontAwesome'; height: 0; width: 0; position: absolute">
+        <!-- Hidden Div To Preload FontAwesome font file -->
+        <i class="bravo-alert__btn-icon fa fa-refresh"></i>
+        <i class="bravo-alert__btn-icon fa fa-times"></i>
+    </div>
 </html>
